--- a/src/sass/new-styles-2/_main.sass
+++ b/src/sass/new-styles-2/_main.sass
@@ -42,6 +42,8 @@
   &:focus, &.is-active
     background-image: linear-gradient(180deg, #ffa461 0%, #f67e25 100%)
     color: #fff
+  &.is-fz-smaller
+    font-size: 14px
 
   &_fixed-width
     width: 230px
