--- a/src/sass/new-styles-2/_service-menu.sass
+++ b/src/sass/new-styles-2/_service-menu.sass
@@ -15,7 +15,22 @@
     .service-menu__item
       margin-top: -1px
     .service-menu__submenu
-      padding-left: 60px
+      padding-left: 0
       a
         padding-top: 12px
         padding-bottom: 11px
+        padding-left: 60px
+        font-size: 18px
+        +reg
+        &.is-active
+          color: #fff
+          background-image: linear-gradient(180deg, #ffa461 0%, #f67e25 100%)
+          small
+            background-color: transparent
+            color: #fff
+      small
+        background-color: transparent
+        color: $text
+        margin-left: 0
+        font-size: 18px
+        line-height: 1.4
