--- a/src/sass/new-style-2.sass
+++ b/src/sass/new-style-2.sass
@@ -305,6 +305,45 @@ $gray: #d8d8d8
       bottom: 0
       transform: translate(0, 4px) rotate(-45deg) 
 
+.radio
+  position: relative
+  padding-left: 30px
+  input[type="radio"]
+    opacity: 0
+    visibility: hidden
+    position: absolute
+  span
+    color: $text
+    cursor: pointer
+    font-size: 18px
+    +reg
+    &::before
+      content: ''
+      display: inline-block
+      position: absolute
+      left: 0
+      top: -3px
+      margin-right: 7px
+      width: 20px
+      height: 20px
+      background: #fff
+      border: 1px solid #979797
+      border-radius: 50%
+    &::after
+      content: ''
+      display: none
+      position: absolute
+      width: 10px
+      height: 10px
+      background-color: $orange
+      border-radius: 50%
+      left: 5px
+      top: 2px
+  input[type="radio"]:checked
+    + span
+      &:after
+        display: block
+
 
 
 
