--- a/src/sass/new-styles-2/_popup.sass
+++ b/src/sass/new-styles-2/_popup.sass
@@ -83,6 +83,19 @@
       font-size: 16px
       color: $text
       +reg
+      +placeholder
+        font-size: 14px
+        color: $text
+        +reg
+
   &__btn
     max-width: 260px
     margin: 0 auto
+  &__btn-short
+    max-width: 200px
+  &__radio
+    text-align: center
+    margin-bottom: 45px
+    .radio
+      margin-left: 10px
+      margin-right: 10px
