--- a/src/sass/new-styles-2/_applications.sass
+++ b/src/sass/new-styles-2/_applications.sass
@@ -13,3 +13,26 @@
     .filter-tag
       margin-right: 0
       margin-left: 20px
+
+.all-applications
+  background-color: #f5f7f7
+  padding-top: 40px
+  padding-bottom: 39px
+  &__inner
+    +clr
+  &__left,
+  &__right
+    float: left
+  &__left
+    width: 57.4%
+  &__right
+    width: 42.6%
+    padding-left: 30px
+  &__btn
+    max-width: 260px
+    margin-left: auto
+    margin-right: auto
+    padding-top: 38px
+  &__title
+    margin-bottom: 25px
+
