add main adaptive part

--- a/src/sass/new-style-2.sass
+++ b/src/sass/new-style-2.sass
@@ -99,6 +99,8 @@ $gray: #d8d8d8
     font-size: 50px
     color: #657977
     +med
+    +r2
+      font-size: 40px
 
 .h2
   &_md
@@ -151,6 +153,11 @@ $gray: #d8d8d8
       background: darken($orange, 10%)
   &_sm
     font-size: 16px
+
+.container
+  &_whider
+    +r2
+      max-width: 758px
 
 .footer
   &__warning
