--- a/src/sass/new-styles-2/_hero.sass
+++ b/src/sass/new-styles-2/_hero.sass
@@ -2,29 +2,47 @@
   +cover
   padding-top: 96px
   padding-bottom: 44px
+  +r2
+    padding-top: 67px
+    padding-bottom: 53px
+    background-position: 65% 50%
   &__title
     max-width: 790px
     margin-bottom: 20px
+    +r2
+      max-width: 323px
+      margin-bottom: 0
   &__subttl
     color: $text
     font-size: 36px
     +light
     margin-bottom: 46px
+    +r2
+      font-size: 24px
+      margin-bottom: 62px
   &__btns
     margin-bottom: 26px
     max-width: 460px
     +clr
+    +r2
+      margin-bottom: 15px
   &__btn
     float: left
     min-width: 220px
     &:first-child
       margin-right: 20px
+    +r2
+      float: none
+      margin-bottom: 31px
+      display: inline-block
   &__link
     font-size: 18px
     display: inline-block
     color: $text
     +med
     margin-bottom: 111px
+    +r2
+      margin-bottom: 92px
   &__support
     color: $text
     font-size: 12px
@@ -32,6 +50,8 @@
     line-height: 1.65
     max-width: 400px
     +clr
+    +r2
+      max-width: 220px
     img
       float: left
     p
