--- a/src/sass/new-styles-2/_request.sass
+++ b/src/sass/new-styles-2/_request.sass
@@ -1,6 +1,9 @@
 .request
   padding-top: 86px
   padding-bottom: 100px
+  +r2
+    padding-top: 46px
+    padding-bottom: 59px
   &__title
     text-align: center
     margin-bottom: 67px
@@ -32,6 +35,14 @@
   padding-right: 40px
   margin-bottom: 28px
   +tr(box-shadow .3s)
+  +r2
+    width: 50%
+    width: calc(50% - 13px)
+    margin-right: 25px
+    &:nth-child(3n-3)
+      margin-right: 25px
+    &:nth-child(even)
+      margin-right: 0
   &:nth-child(3n-3)
     margin-right: 0
   &:hover
