add main adaptive

--- a/src/sass/new-style-2.sass
+++ b/src/sass/new-style-2.sass
@@ -101,12 +101,16 @@ $gray: #d8d8d8
     +med
     +r2
       font-size: 40px
+    +r3
+      font-size: 30px
 
 .h2
   &_md
     font-size: 36px
     color: $text
     +med
+    +r3
+      font-size: 24px
   &_sm
     font-size: 30px
     color: $text
@@ -170,6 +174,10 @@ $gray: #d8d8d8
     text-align: center
     line-height: 1.5
     border-top: 1px solid  $gray
+    +r2
+      font-size: 9px
+      padding-top: 5px
+      padding-bottom: 14px
 
 .select
   &_volonter
