--- a/src/sass/new-styles-2/_hero.sass
+++ b/src/sass/new-styles-2/_hero.sass
@@ -6,12 +6,22 @@
     padding-top: 67px
     padding-bottom: 53px
     background-position: 65% 50%
+  +r3
+    background-color: #f0ecec
+    background-image: none !important
+    text-align: center
+    padding-top: 48px
+    padding-bottom: 31px
   &__title
     max-width: 790px
     margin-bottom: 20px
     +r2
       max-width: 323px
       margin-bottom: 0
+    +r3
+      margin-left: auto
+      margin-right: auto
+      margin-bottom: 20px
   &__subttl
     color: $text
     font-size: 36px
@@ -20,12 +30,19 @@
     +r2
       font-size: 24px
       margin-bottom: 62px
+    +r3
+      font-size: 18px
+      margin-bottom: 38px
   &__btns
     margin-bottom: 26px
     max-width: 460px
     +clr
     +r2
       margin-bottom: 15px
+    +r3
+      margin-left: auto
+      margin-right: auto
+      margin-bottom: 0
   &__btn
     float: left
     min-width: 220px
@@ -35,6 +52,11 @@
       float: none
       margin-bottom: 31px
       display: inline-block
+    +r3
+      width: 100%
+      margin-bottom: 21px
+      &:first-child
+        margin-right: 0
   &__link
     font-size: 18px
     display: inline-block
@@ -43,6 +65,8 @@
     margin-bottom: 111px
     +r2
       margin-bottom: 92px
+    +r3
+      margin-bottom: 53px
   &__support
     color: $text
     font-size: 12px
@@ -52,6 +76,11 @@
     +clr
     +r2
       max-width: 220px
+    +r3
+      margin-left: auto
+      margin-right: auto
+      font-size: 10px
+      max-width: 260px
     img
       float: left
     p
