--- a/src/sass/new-styles-2/_request.sass
+++ b/src/sass/new-styles-2/_request.sass
@@ -4,16 +4,25 @@
   +r2
     padding-top: 46px
     padding-bottom: 59px
+  +r3
+    padding-top: 34px
   &__title
     text-align: center
     margin-bottom: 67px
+    +r3
+      margin-bottom: 33px
   &__filter-tags
     margin-bottom: 31px
+    +r3
+      margin-bottom: 0
   &__requests
     margin-bottom: 25px
   &__btn
     max-width: 220px
     margin: 0 auto
+    +r3
+      max-width: none
+      text-align: center
 
 .request-items
   display: flex
@@ -43,6 +52,18 @@
       margin-right: 25px
     &:nth-child(even)
       margin-right: 0
+  +r3
+    width: 100%
+    margin-right: 0
+    padding-left: 27px
+    padding-right: 27px
+    padding-bottom: 28px
+    margin-bottom: 18px
+    border: none
+    box-shadow: 0 1px 30px rgba(0, 0, 0, 0.1)
+    &:nth-child(3n-3)
+      margin-right: 0
+
   &:nth-child(3n-3)
     margin-right: 0
   &:hover
@@ -57,11 +78,15 @@
     border-bottom: 1px solid $gray
     +tr(color .3s)
     margin-bottom: 19px
+    +r3
+      font-size: 18px
   &__person
     display: flex
     justify-content: flex-start
     align-items: center
     margin-bottom: 35px
+    +r3
+      margin-bottom: 35px
   &__person-img
     +cover
     width: 50px
@@ -83,13 +108,17 @@
   &__contact
     font-size: 14px
     color: $text
+    width: calc(100% - 28px)
+    padding-left: 9px
     +regi
+    +r3
+      font-size: 12px
+      padding-left: 20px
   &__icon
     display: inline-block
     width: 28px
     height: 28px
     border-radius: 50%
-    margin-right: 9px
     +vertical
     i
       display: inline-block
@@ -111,10 +140,16 @@
     margin-bottom: 12px
   &__contacts
     margin-bottom: 34px
+    +r3
+      margin-bottom: 25px
   &__date
     color: $text
     +med
     font-size: 14px
+    +r3
+      text-align: center
+      border-top: 1px solid $gray
+      padding-top: 17px
   &__label
     position: absolute
     right: -6px
