add dislife-catalog-volonter+popup adaptive

--- a/src/partials/filters-block.html
+++ b/src/partials/filters-block.html
@@ -39,7 +39,7 @@
   </div>
 
   <div class="filters-block__bottom">
-    <div class="filters-block__all">Всего найдено волонтеров: 145</div>
+    <div class="filters-block__all"><p>Всего найдено волонтеров: 145</p></div>
     <div class="filters-block__checkboxes">
       <div class="checkbox checkbox_volonter">
         <label>
