--- a/src/sass/new-style-2.sass
+++ b/src/sass/new-style-2.sass
@@ -205,14 +205,17 @@ $gray: #d8d8d8
       font-size: 16px
       color: $text
       +reg
+      +r2
+        font-size: 12px
       &::before
         top: -2px
         width: 25px
-        height: 25px
+        height: 25px        
       &::after
         top: 4px
         left: 5px
         color: #fff
+        font-size: 16px
     input[type="checkbox"]:checked
       + span
         &::before
