--- a/src/sass/new-styles-2/_catalog.sass
+++ b/src/sass/new-styles-2/_catalog.sass
@@ -1,16 +1,29 @@
 .catalog
   padding-top: 39px
   padding-bottom: 38px
+  +r2
+    padding-top: 0
   .container
     +clr
   &__title
     float: left
     margin-bottom: 27px
+    +r2
+      margin-bottom: 22px
+    +r3
+      float: none
+      text-align: center
+      margin-bottom: 41px
   &__btn
     float: right
     min-width: 220px
     padding-top: 10px
     margin-bottom: 27px
+    +r2
+      margin-bottom: 22px
+    +r3
+      float: none
+      text-align: center
   &__filters-block,
   &__list,
   &__pagination
@@ -20,6 +33,8 @@
     margin-bottom: 40px
   &__list
     margin-bottom: 39px
+    +r2
+      margin-bottom: 19px
 
 .filters-block
   border: 1px solid $gray
@@ -33,25 +48,76 @@
     border-bottom: 1px solid $gray
     padding-bottom: 6px
     padding-right: 0
+    +r1
+      padding-left: 20px
+      padding-right: 20px
+      padding-bottom: 0
   &__bottom
     padding-top: 14px
     padding-bottom: 15px
+    +r1
+      padding-left: 0
+      padding-right: 0
+      padding-bottom: 69px
+      padding-top: 0
   &__select, &__filter-tags, &__all, &__checkboxes, &__links
     float: left
   &__select, &__all
     width: 310px
+    +r1
+      width: 100%
   &__filter-tags, &__checkboxes, &__links
     width: calc(100% - 310px)
     padding-left: 85px
+    +r1
+      width: 100%
+      padding-left: 0
+  &__select
+    +r1
+      margin-bottom: 20px
+    +r3
+      margin-bottom: 8px
   &__all
     font-size: 20px
     +med
     color: #353535
+    .filter-tag
+      margin-bottom: 10px
+      padding-left: 25px
+      padding-right: 25px
+    +r1
+      height: 69px
+      position: relative
+      top: 69px
+      +vertical
+      font-size: 20px
+      p
+        display: inline-block
+        vertical-align: middle
+    +r(584)
+        top: 97px 
+        font-size: 14px 
   &__checkboxes
     padding-top: 4px
+    +r1
+      border-bottom: 1px solid  $gray
+      padding-top: 21px
+      padding-bottom: 5px
+      margin-top: -69px
+      padding-left: 20px
+      padding-right: 20px
+      .checkbox
+        margin-bottom: 16px
+    +r2
+      padding-right: 5px
     .checkbox
       display: inline-block
       margin-right: 100px
+      &:last-child
+        margin-right: 0
+    +r4
+      .checkbox
+        margin-right: 0
   &__links
     padding-top: 4px
   &__link
@@ -62,15 +128,19 @@
     &.is-active
       text-decoration: underline
       color: #ff8c61
-
-  &_all
-    .filter-tag
-      margin-bottom: 10px
-      padding-left: 25px
-      padding-right: 25px
+    
 
 
 .catalog-list
+  +r2
+    margin-left: -13px
+    margin-right: -13px
+    display: flex
+    justify-content: flex-start
+    flex-wrap: wrap
+  +r3
+    margin-left: 0
+    margin-right: 0
   &__head
     display: flex
     justify-content: flex-start
@@ -80,6 +150,12 @@
     border-bottom: 1px solid  $gray
     padding-bottom: 23px
     padding-top: 20px
+    margin-right: -20px
+    margin-left: -20px
+    padding-left: 20px
+    padding-right: 20px
+    +r2
+      display: none
   &__head-col
     &.is-name
       width: 24.2%
@@ -122,26 +198,56 @@
     display: none
   &::after
     bottom: 0
+    +r2
+      display: none
   &:hover
     box-shadow: 0 1px 30px rgba(0, 0, 0, 0.1)
     &::before
       display: block
     &::after
       display: none
+  +r2
+    flex-direction: column
+    font-size: 14px
+    box-shadow: 0 1px 20px rgba(0, 0, 0, 0.1)
+    border-radius: 3px
+    margin-bottom: 21px
+    width: calc(50% - 26px)
+    margin-left: 13px
+    margin-right: 13px
+    padding-top: 15px
+  +r3
+    width: 100%
+    margin-left: 0
+    margin-right: 0
   &__img
     +cover
     width: 80px
     height: 80px
     border-radius: 50%
     position: relative
+    +r2
+      width: 50px
+      height: 50px
     &:hover
       .catalog-item__tooltip
         &.is-active
           display: block
   &__name
     +med
-    width: calc(24.2% - 80px)
+    // width: calc(24.2% - 80px)
     padding-left: 20px
+  &__person
+    width: 24.2%
+    display: flex
+    justify-content: flex-start
+    align-items: center
+    +r2
+      width: 100%
+      border-bottom: 1px solid  $gray
+      padding-bottom: 15px
+      padding-top: 10px
+      position: relative
   &__img-icon
     border-radius: 50%
     background-color: #7ed321
@@ -152,6 +258,11 @@
     top: 0
     right: -6px
     display: none
+    +r2
+      width: 20px
+      height: 20px
+      .fa
+        font-size: 10px
     .fa
       font-size: 16px
       color: #fff
@@ -161,21 +272,62 @@
       display: block
   &__city
     width: 12.3%
+    +r2
+      width: 100%
+      border-bottom: 1px solid  $gray
+      padding-bottom: 10px
+      padding-top: 19px
+      padding-left: 96px
+      position: relative
   &__social
     width: 20.2%
+    +r2
+      width: 100%
+      border-bottom: 1px solid  $gray
+      padding-bottom: 10px
+      padding-top: 19px
+      padding-left: 96px
+      position: relative
   &__rating
     width: 14.7%
+    +r2
+      width: 100%
+      border-bottom: 1px solid  $gray
+      padding-bottom: 10px
+      padding-top: 19px
+      padding-left: 96px
+      position: relative
   &__feedbacks
     width: 10.1%
+    +r2
+      width: 100%
+      border-bottom: 1px solid  $gray
+      padding-bottom: 10px
+      padding-top: 19px
+      padding-left: 96px
+      position: relative
   &__type
     width: 19.5%
+    +r2
+      width: 100%
+      padding-left: 96px
+      padding-top: 19px
+      position: relative
+      img
+        display: inline-block
+        vertical-align: bottom
   &__social-icon
     display: inline-block
     margin-right: 10px
     vertical-align: top
+    +r2
+      margin-right: 5px
     svg
       width: 30px
       height: 30px
+      +r2
+        width: 20px
+        height: 20px
   &__rating-block
     display: inline-block
     margin-right: 10px
@@ -203,6 +355,14 @@
     border-radius: 3px
     box-shadow: 0 1px 10px rgba(0, 0, 0, 0.2)
     display: none
+  &__head-mob-item
+    display: none
+    color: #9b9b9b
+    font-size: 12px
+    position: absolute
+    left: 0
+    +r2
+      display: inline-block
 
   &_short-hover
     margin-left: 0
