--- a/src/sass/new-styles-2/_main.sass
+++ b/src/sass/new-styles-2/_main.sass
@@ -82,6 +82,18 @@
     padding-left: 10px
     padding-right: 10px
     margin-bottom: 0
+    +r1
+      width: auto
+      min-width: 210px
+      padding-left: 21px
+      padding-right: 21px
+      margin-bottom: 6px
+    +r2
+      padding-left: 21px
+      padding-right: 21px
+    +r3
+      width: 100%
+      margin-bottom: 11px
 
 .helpers-section
   background-color: #f5f7f7
@@ -208,11 +220,20 @@
   &_width
     display: flex
     justify-content: space-between
+    flex-wrap: wrap
     width: 100%
+    +r3
+      margin-bottom: 45px
+      .helper__img
+        width: 100px
+        height: 100px
+        margin-bottom: 11px
     .helper__social
       position: static
       text-align: left
       margin-bottom: 20px
+      +r3
+        text-align: center
     .helper__social-icon
       margin-left: 0
       margin-right: 10px
@@ -221,23 +242,46 @@
         height: 30px
     .helper__name
       margin-bottom: 11px
+      +r2
+        margin-bottom: 3px
+      +r3
+        font-size: 18px
+        margin-bottom: 14px
     .helper__info-block
       width: auto
       margin-right: 20px
+    &__left
+      +r3
+        width: 100%
     &__center
       flex: 1
       text-align: left
       padding-left: 39px
       padding-top: 16px
+      +r3
+        padding-top: 6px
+        padding-left: 0
+        text-align: center
+      .helper_width__type
+        display: none
+        +r2
+          display: block
+          margin-bottom: 10px
     &__city
       font-size: 16px
       color: $text
       margin-bottom: 18px
+      +r3
+        font-size: 14px
     &__right
       padding-top: 29px
+      +r2
+        display: none
     &__type
       font-size: 16px
       color: $text
+      +r3
+        font-size: 14px
 
 .partners
   padding-top: 78px
