--- a/src/sass/new-styles-2/_popup.sass
+++ b/src/sass/new-styles-2/_popup.sass
@@ -2,6 +2,8 @@
   &_lg
     &__in
       max-width: 850px
+      +r2
+        max-width: 570px
     &__title
       text-align: center
       margin-bottom: 35px
@@ -80,6 +82,8 @@
   &__title
     border-bottom: 1px solid  $gray
     padding-bottom: 20px
+    +r3
+      text-align: center
   &__feedbacks
     margin-bottom: 40px
   &__btn
