--- a/src/sass/new-styles-2/_main.sass
+++ b/src/sass/new-styles-2/_main.sass
@@ -94,6 +94,10 @@
     +r3
       width: 100%
       margin-bottom: 11px
+  &_mob-full
+    +r3
+      width: 100%
+      margin-bottom: 10px
 
 .helpers-section
   background-color: #f5f7f7
