--- a/src/sass/new-styles-2/_applications.sass
+++ b/src/sass/new-styles-2/_applications.sass
@@ -12,14 +12,14 @@
       margin-bottom: 21px
   &__title
     float: left
-    +r2
+    +r1
       float: none
     +r3
       text-align: center
   &__filter-tags
     padding-top: 20px
     float: right
-    +r2
+    +r1
       float: none
       .filter-tags
         text-align: left
@@ -44,6 +44,10 @@
     .filter-tag
       margin-right: 0
       margin-left: 20px
+      padding-left: 25px
+      padding-right: 25px
+      &:first-child
+        margin-left: 0
 
 .all-applications
   background-color: #f5f7f7
