--- a/src/partials/applications-user.html
+++ b/src/partials/applications-user.html
@@ -47,11 +47,13 @@
     <!-- begin catalog-item -->
     <div class="catalog-item catalog-item_short-hover is-active">
       <div class="catalog-item_short-hover__top">
-        <div class="catalog-item__img" style="background-image: url('img/volonter/user/user-catalog-1.jpg');">
-          <div class="catalog-item__img-icon is-active"><i class="fa fa-check"></i></div>
-          <div class="catalog-item__tooltip is-active">Волонтер, прикрепивший паспорт</div>
-        </div>
-        <div class="catalog-item__name">Алексей Д. М.</div>
+        <div class="catalog-item__person">
+          <div class="catalog-item__img" style="background-image: url('img/volonter/user/user-catalog-1.jpg');">
+            <div class="catalog-item__img-icon is-active"><i class="fa fa-check"></i></div>
+            <div class="catalog-item__tooltip is-active">Волонтер, прикрепивший паспорт</div>
+          </div>
+          <div class="catalog-item__name">Алексей Д. М.</div>
+        </div>        
         <div class="catalog-item__social">
           <a href="#" class="catalog-item__social-icon">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="42" height="42" viewBox="0 0 42 42"><defs><path id="1bfja" d="M684 4178.86a19.86 19.86 0 1 1 39.72 0 19.86 19.86 0 0 1-39.72 0z"/><path id="1bfjb" d="M703.1 4187.56h1.57s.47-.05.7-.3c.23-.25.22-.7.22-.7s-.03-2.08.94-2.4c.96-.3 2.19 2.03 3.49 2.92.98.68 1.73.53 1.73.53l3.48-.05s1.83-.1.96-1.54c-.07-.12-.5-1.06-2.59-3-2.18-2.02-1.89-1.7.74-5.2 1.6-2.14 2.24-3.44 2.04-4-.19-.53-1.36-.39-1.36-.39l-3.93.03s-.29-.04-.5.08a1.1 1.1 0 0 0-.35.43s-.62 1.65-1.45 3.05c-1.74 2.97-2.44 3.12-2.72 2.94-.67-.43-.5-1.72-.5-2.64 0-2.88.43-4.07-.85-4.38a6.7 6.7 0 0 0-1.83-.19c-1.4-.01-2.58 0-3.25.34-.45.21-.8.7-.59.73.26.03.85.16 1.16.58.4.55.39 1.78.39 1.78s.23 3.38-.54 3.8c-.53.29-1.25-.3-2.8-3-.8-1.37-1.4-2.9-1.4-2.9s-.13-.28-.33-.43c-.25-.18-.6-.24-.6-.24l-3.73.02s-.56.02-.76.26c-.19.22-.02.66-.02.66s2.92 6.83 6.22 10.27c3.03 3.15 6.47 2.94 6.47 2.94z"/></defs><g><g transform="translate(-683 -4158)"><g><use fill="#4d76a1" xlink:href="#1bfja"/><use fill="#fff" fill-opacity="0" stroke="#fff" stroke-miterlimit="50" xlink:href="#1bfja"/></g><g><use fill="#fff" xlink:href="#1bfjb"/></g></g></g></svg>
@@ -100,11 +102,14 @@
     <!-- begin catalog-item -->
     <div class="catalog-item catalog-item_short-hover">
       <div class="catalog-item_short-hover__top">
-        <div class="catalog-item__img" style="background-image: url('img/volonter/user/user-catalog-1.jpg');">
-          <div class="catalog-item__img-icon"><i class="fa fa-check"></i></div>
-          <div class="catalog-item__tooltip">Волонтер, прикрепивший паспорт</div>
+        <div class="catalog-item__person">
+          <div class="catalog-item__img" style="background-image: url('img/volonter/user/user-catalog-1.jpg');">
+            <div class="catalog-item__img-icon"><i class="fa fa-check"></i></div>
+            <div class="catalog-item__tooltip">Волонтер, прикрепивший паспорт</div>
+          </div>
+          <div class="catalog-item__name">Алексей Д. М.</div>
         </div>
-        <div class="catalog-item__name">Алексей Д. М.</div>
+        
         <div class="catalog-item__social">
           <a href="#" class="catalog-item__social-icon">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="42" height="42" viewBox="0 0 42 42"><defs><path id="1bfja" d="M684 4178.86a19.86 19.86 0 1 1 39.72 0 19.86 19.86 0 0 1-39.72 0z"/><path id="1bfjb" d="M703.1 4187.56h1.57s.47-.05.7-.3c.23-.25.22-.7.22-.7s-.03-2.08.94-2.4c.96-.3 2.19 2.03 3.49 2.92.98.68 1.73.53 1.73.53l3.48-.05s1.83-.1.96-1.54c-.07-.12-.5-1.06-2.59-3-2.18-2.02-1.89-1.7.74-5.2 1.6-2.14 2.24-3.44 2.04-4-.19-.53-1.36-.39-1.36-.39l-3.93.03s-.29-.04-.5.08a1.1 1.1 0 0 0-.35.43s-.62 1.65-1.45 3.05c-1.74 2.97-2.44 3.12-2.72 2.94-.67-.43-.5-1.72-.5-2.64 0-2.88.43-4.07-.85-4.38a6.7 6.7 0 0 0-1.83-.19c-1.4-.01-2.58 0-3.25.34-.45.21-.8.7-.59.73.26.03.85.16 1.16.58.4.55.39 1.78.39 1.78s.23 3.38-.54 3.8c-.53.29-1.25-.3-2.8-3-.8-1.37-1.4-2.9-1.4-2.9s-.13-.28-.33-.43c-.25-.18-.6-.24-.6-.24l-3.73.02s-.56.02-.76.26c-.19.22-.02.66-.02.66s2.92 6.83 6.22 10.27c3.03 3.15 6.47 2.94 6.47 2.94z"/></defs><g><g transform="translate(-683 -4158)"><g><use fill="#4d76a1" xlink:href="#1bfja"/><use fill="#fff" fill-opacity="0" stroke="#fff" stroke-miterlimit="50" xlink:href="#1bfja"/></g><g><use fill="#fff" xlink:href="#1bfjb"/></g></g></g></svg>
@@ -115,9 +120,9 @@
         </div>
         <div class="catalog-item__rating">
           Впервые принял заявку<br>
-          Пока нет рекомендаций
+          <strong>Пока нет рекомендаций</strong>
         </div>
-        <div class="catalog-item__type">Частный волонтер</div>
+        <div class="catalog-item__type"><span><img src="img/volonter/catalog-type-img.png" alt="" width="30" height="30">Фонд "Первая помощь"</span></div>
       </div>
       <div class="catalog-item_short-hover__descr">
         <p>Буду рад оказать Вам помощь! Свободен в указанный промежуток времени.</p>
@@ -186,6 +191,10 @@
           <div class="request-item_big-equal-cols__btns">
             <a href="#" class="btn-full btn-full_grad-orange"><span>Редактировать</span></a>
             <a href="#" class="btn-full btn-full_grad-green"><span>Отменить заявку</span></a>
+            <a href="#" class="catalog-item_short-hover__control has-no-underline">
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="20" height="20" viewBox="0 0 20 20"><defs><path id="3uroa" d="M1157.18 593.93l3.32 3.33c.09.09.13.22.13.31s-.04.22-.13.31l-.62.62a.48.48 0 0 1-.31.13.4.4 0 0 1-.31-.13l-3.33-3.32a.21.21 0 0 0-.3 0l-3.33 3.32a.48.48 0 0 1-.31.13.4.4 0 0 1-.31-.13l-.62-.62a.48.48 0 0 1-.14-.31c0-.09.05-.22.14-.31l3.32-3.33a.21.21 0 0 0 0-.3l-3.32-3.33a.48.48 0 0 1-.14-.31c0-.1.05-.23.14-.31l.62-.62a.48.48 0 0 1 .3-.14c.1 0 .23.05.32.14l3.32 3.32c.1.09.22.09.31 0l3.33-3.32a.48.48 0 0 1 .31-.14.4.4 0 0 1 .31.14l.62.62c.09.08.13.22.13.3 0 .1-.04.23-.13.32l-3.32 3.32c-.1.05-.1.22 0 .31zm-1.42-9.93a9.73 9.73 0 0 0-9.76 9.76 9.73 9.73 0 0 0 9.76 9.75 9.73 9.73 0 0 0 9.75-9.75 9.73 9.73 0 0 0-9.75-9.76z"/></defs><g><g transform="translate(-1146 -584)"><use fill="#9b9b9b" xlink:href="#3uroa"/></g></g></svg>
+              <span>Отменить заявку</span>
+            </a>
           </div>
         </div> 
 
@@ -235,6 +244,10 @@
           </div>
           <div class="request-item_big-equal-cols__btns">
             <a href="#" class="btn-full btn-full_grad-green"><span>Отменить заявку</span></a>
+            <a href="#" class="catalog-item_short-hover__control has-no-underline">
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="20" height="20" viewBox="0 0 20 20"><defs><path id="3uroa" d="M1157.18 593.93l3.32 3.33c.09.09.13.22.13.31s-.04.22-.13.31l-.62.62a.48.48 0 0 1-.31.13.4.4 0 0 1-.31-.13l-3.33-3.32a.21.21 0 0 0-.3 0l-3.33 3.32a.48.48 0 0 1-.31.13.4.4 0 0 1-.31-.13l-.62-.62a.48.48 0 0 1-.14-.31c0-.09.05-.22.14-.31l3.32-3.33a.21.21 0 0 0 0-.3l-3.32-3.33a.48.48 0 0 1-.14-.31c0-.1.05-.23.14-.31l.62-.62a.48.48 0 0 1 .3-.14c.1 0 .23.05.32.14l3.32 3.32c.1.09.22.09.31 0l3.33-3.32a.48.48 0 0 1 .31-.14.4.4 0 0 1 .31.14l.62.62c.09.08.13.22.13.3 0 .1-.04.23-.13.32l-3.32 3.32c-.1.05-.1.22 0 .31zm-1.42-9.93a9.73 9.73 0 0 0-9.76 9.76 9.73 9.73 0 0 0 9.76 9.75 9.73 9.73 0 0 0 9.75-9.75 9.73 9.73 0 0 0-9.75-9.76z"/></defs><g><g transform="translate(-1146 -584)"><use fill="#9b9b9b" xlink:href="#3uroa"/></g></g></svg>
+              <span>Отменить заявку</span>
+            </a>
           </div>
         </div> 
 
@@ -242,13 +255,16 @@
     </div>
 
     <!-- begin catalog-item -->
-    <div class="catalog-item catalog-item_short-hover has-button">
+    <div class="catalog-item catalog-item_short-hover is-active has-button is-last">
       <div class="catalog-item_short-hover__top">
-        <div class="catalog-item__img" style="background-image: url('img/volonter/user/user-catalog-1.jpg');">
-          <div class="catalog-item__img-icon"><i class="fa fa-check"></i></div>
-          <div class="catalog-item__tooltip">Волонтер, прикрепивший паспорт</div>
+        <div class="catalog-item__person">
+          <div class="catalog-item__img" style="background-image: url('img/volonter/user/user-catalog-1.jpg');">
+            <div class="catalog-item__img-icon"><i class="fa fa-check"></i></div>
+            <div class="catalog-item__tooltip">Волонтер, прикрепивший паспорт</div>
+          </div>
+          <div class="catalog-item__name">Алексей Д. М.</div>
         </div>
-        <div class="catalog-item__name">Алексей Д. М.</div>
+        
         <div class="catalog-item__social">
           <a href="#" class="catalog-item__social-icon">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="42" height="42" viewBox="0 0 42 42"><defs><path id="1bfja" d="M684 4178.86a19.86 19.86 0 1 1 39.72 0 19.86 19.86 0 0 1-39.72 0z"/><path id="1bfjb" d="M703.1 4187.56h1.57s.47-.05.7-.3c.23-.25.22-.7.22-.7s-.03-2.08.94-2.4c.96-.3 2.19 2.03 3.49 2.92.98.68 1.73.53 1.73.53l3.48-.05s1.83-.1.96-1.54c-.07-.12-.5-1.06-2.59-3-2.18-2.02-1.89-1.7.74-5.2 1.6-2.14 2.24-3.44 2.04-4-.19-.53-1.36-.39-1.36-.39l-3.93.03s-.29-.04-.5.08a1.1 1.1 0 0 0-.35.43s-.62 1.65-1.45 3.05c-1.74 2.97-2.44 3.12-2.72 2.94-.67-.43-.5-1.72-.5-2.64 0-2.88.43-4.07-.85-4.38a6.7 6.7 0 0 0-1.83-.19c-1.4-.01-2.58 0-3.25.34-.45.21-.8.7-.59.73.26.03.85.16 1.16.58.4.55.39 1.78.39 1.78s.23 3.38-.54 3.8c-.53.29-1.25-.3-2.8-3-.8-1.37-1.4-2.9-1.4-2.9s-.13-.28-.33-.43c-.25-.18-.6-.24-.6-.24l-3.73.02s-.56.02-.76.26c-.19.22-.02.66-.02.66s2.92 6.83 6.22 10.27c3.03 3.15 6.47 2.94 6.47 2.94z"/></defs><g><g transform="translate(-683 -4158)"><g><use fill="#4d76a1" xlink:href="#1bfja"/><use fill="#fff" fill-opacity="0" stroke="#fff" stroke-miterlimit="50" xlink:href="#1bfja"/></g><g><use fill="#fff" xlink:href="#1bfjb"/></g></g></g></svg>
@@ -259,30 +275,11 @@
         </div>
         <div class="catalog-item__rating">
           Впервые принял заявку<br>
-          Пока нет рекомендаций
+          <strong>Пока нет рекомендаций</strong>
         </div>
         <div class="catalog-item__type">Частный волонтер</div>
       </div>
-      <div class="catalog-item_short-hover__descr">
-        <p>Буду рад оказать Вам помощь! Свободен в указанный промежуток времени.</p>
-      </div>
-      <div class="catalog-item_short-hover__options">
-        <div class="catalog-item_short-hover__contacts">
-          Телефон волонтера: <br> 
-          <span>+7 (912) 123-14-56</span>
-        </div>
-        <div class="catalog-item_short-hover__options-text">Свяжитесь с ним и договоритесь о помощи!</div>
-        <div class="catalog-item_short-hover__controls">
-          <a href="#" class="catalog-item_short-hover__control">
-            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="20" viewBox="0 0 24 20"><defs><path id="nrtza" d="M499 4259h23.33v19.95H499z"/><path id="nrtzc" d="M519.09 4259a3.26 3.26 0 0 1 3.24 3.26v9.31c0 1.8-1.45 3.26-3.24 3.26h-.86v3.65a.48.48 0 0 1-.47.47.47.47 0 0 1-.31-.1l-4.73-4.02h-10.48a3.26 3.26 0 0 1-3.24-3.26v-9.3c0-1.8 1.46-3.27 3.24-3.27h16.85m-.8 11.43c.27 0 .48-.21.48-.48a.47.47 0 0 0-.48-.47h-15.25a.47.47 0 0 0-.47.48c0 .26.2.47.47.47h15.25m0-3.05c.27 0 .48-.21.48-.47a.47.47 0 0 0-.48-.48h-15.25a.47.47 0 0 0-.47.48c0 .26.2.47.47.47h15.25m0-3.05c.27 0 .48-.21.48-.47a.47.47 0 0 0-.48-.48h-15.25a.47.47 0 0 0-.47.48c0 .26.2.47.47.47h15.25"/><clipPath id="nrtzb"><use xlink:href="#nrtza"/></clipPath></defs><g><g transform="translate(-499 -4259)"><g/><g clip-path="url(#nrtzb)"><use fill="#9b9b9b" xlink:href="#nrtzc"/></g></g></g></svg>
-            <span>Добавить отзыв</span>
-          </a>
-          <a href="#" class="catalog-item_short-hover__control">
-            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="20" height="20" viewBox="0 0 20 20"><defs><path id="3uroa" d="M1157.18 593.93l3.32 3.33c.09.09.13.22.13.31s-.04.22-.13.31l-.62.62a.48.48 0 0 1-.31.13.4.4 0 0 1-.31-.13l-3.33-3.32a.21.21 0 0 0-.3 0l-3.33 3.32a.48.48 0 0 1-.31.13.4.4 0 0 1-.31-.13l-.62-.62a.48.48 0 0 1-.14-.31c0-.09.05-.22.14-.31l3.32-3.33a.21.21 0 0 0 0-.3l-3.32-3.33a.48.48 0 0 1-.14-.31c0-.1.05-.23.14-.31l.62-.62a.48.48 0 0 1 .3-.14c.1 0 .23.05.32.14l3.32 3.32c.1.09.22.09.31 0l3.33-3.32a.48.48 0 0 1 .31-.14.4.4 0 0 1 .31.14l.62.62c.09.08.13.22.13.3 0 .1-.04.23-.13.32l-3.32 3.32c-.1.05-.1.22 0 .31zm-1.42-9.93a9.73 9.73 0 0 0-9.76 9.76 9.73 9.73 0 0 0 9.76 9.75 9.73 9.73 0 0 0 9.75-9.75 9.73 9.73 0 0 0-9.75-9.76z"/></defs><g><g transform="translate(-1146 -584)"><use fill="#9b9b9b" xlink:href="#3uroa"/></g></g></svg>
-            <span>Отменить</span>
-          </a>
-        </div>
-      </div>
+      
       <div class="catalog-item_short-hover__btn">
         <a href="#" class="btn-full btn-full_grad-orange btn-full_sm"><span>Подтвердить</span></a>
       </div>
