--- a/src/sass/new-styles-2/_popup.sass
+++ b/src/sass/new-styles-2/_popup.sass
@@ -3,7 +3,7 @@
     &__in
       max-width: 850px
       +r2
-        max-width: 570px
+        max-width: 570px      
     &__title
       text-align: center
       margin-bottom: 35px
@@ -12,11 +12,18 @@
       padding-left: 50px
       padding-right: 50px
       padding-bottom: 39px
+      +r3
+        padding-left: 20px
+        padding-right: 20px      
     &__text
       text-align: center
       font-size: 14px
       color: $text
       margin-bottom: 34px
+      +r3
+        max-width: 211px
+        margin-left: auto
+        margin-right: auto
     &__btns
       text-align: center
       margin-bottom: 20px
@@ -25,6 +32,20 @@
       min-width: 200px
       margin-left: 10px
       margin-right: 10px
+      +r3
+        width: 100%
+        margin-bottom: 20px
+        margin-left: 0
+        margin-right: 0
+  &_mob-height-full
+    .popup__body
+      +r3
+        height: calc(100vh - 70px)
+        display: flex
+        flex-direction: column
+        justify-content: center
+      +rh(420)
+        height: auto
 
 .popup-main
   .popup__body
@@ -32,6 +53,9 @@
     padding-bottom: 0
     padding-left: 0
     padding-right: 0
+    +r3
+      padding-left: 0
+      padding-right: 0
   &__title
     text-align: center
     margin-bottom: 41px
@@ -73,6 +97,11 @@
       max-width: none
       text-align: center
 
+.popup-account
+  &__form
+    +r3
+      flex: 1
+
 .popup-catalog
   .popup__body
     padding-left: 30px
@@ -91,8 +120,14 @@
     margin: 0 auto
 
 .popup_lg-form
+  +r3
+    height: 100%
+    form
+      height: 100%
   &__textarea
     margin-bottom: 40px
+    +r3
+      height: calc(100% - 80px)
     textarea
       width: 100%
       resize: none
@@ -107,6 +142,11 @@
         font-size: 14px
         color: $text
         +reg
+      +r2
+        min-height: 240px
+      +r3
+        min-height: auto
+        height: 100%
 
   &__btn
     max-width: 260px
