--- a/src/sass/lib/_mixins.sass
+++ b/src/sass/lib/_mixins.sass
@@ -34,7 +34,8 @@
 	position: absolute
 	top: 50%
 	left: 50%
-	+translate(-50%,-50%)
+	// +translate(-50%,-50%)
+	transform: translate(-50%, -50%)
 
 // bulletproof vertical-align
 =vertical
