--- a/src/sass/new-style-2.sass
+++ b/src/sass/new-style-2.sass
@@ -402,14 +402,28 @@ $gray: #d8d8d8
 .section-filters-block
   padding-top: 35px
   padding-bottom: 45px
+  +r2
+    padding-bottom: 0
+    background-color: #f5f7f7
+  .filter-tag
+    margin-bottom: 10px
+  .filter-tags
+    padding-bottom: 0
   &__top
     +clr
     margin-bottom: 30px
   &__title
-    float: left    
+    float: left
+    +r3
+      float: none
+      text-align: center
+      margin-bottom: 41px
   &__btn
     float: right
     min-width: 220px
+    +r3
+      float: none
+      text-align: center      
 
 .text-block
   font-size: 14px
@@ -418,9 +432,20 @@ $gray: #d8d8d8
     margin-bottom: 36px
   h4
     margin-bottom: 19px
+  ul
+    font-size: 0
   li
     margin-bottom: 21px
     position: relative
+    font-size: 14px
+    padding-left: 30px
+    +r2
+      display: inline-block
+      width: 50%
+      vertical-align: top
+    +r3
+      display: block
+      width: auto
     span
       display: inline-block
       background-color: $orange
@@ -428,9 +453,9 @@ $gray: #d8d8d8
       height: 20px
       border-radius: 50%
       +vertical
-      position: relative
-      top: -5px
-      margin-right: 10px     
+      position: absolute
+      top: 0
+      left: 0
       .fa
         display: inline-block
         vertical-align: middle
@@ -439,6 +464,8 @@ $gray: #d8d8d8
 
 .map
   min-height: 500px
+  &_in-item
+    min-height: 280px    
 
 .profile-menu-mob
   display: none
@@ -454,6 +481,33 @@ $gray: #d8d8d8
     display: block
   +r3
     margin-bottom: 15px
+
+.map-tags
+  font-size: 0
+  border-radius: 3px
+  border: 1px solid  $gray
+  display: inline-block
+
+.map-tag
+  font-size: 16px
+  +med
+  color: $text  
+  
+  background-color: transparent
+  display: inline-block
+  text-align: center
+  min-width: 160px
+  padding: 10px
+  &.is-active
+    color: #fff
+    background-image: linear-gradient(180deg, #ffa461 0%, #f67e25 100%)
+
+.map-btn
+  &__hide,
+  &__show
+    display: none
+    &.is-active
+      display: inline-block
 
 
 
