--- a/src/sass/new-styles-2/_catalog.sass
+++ b/src/sass/new-styles-2/_catalog.sass
@@ -40,6 +40,7 @@
   border: 1px solid $gray
   border-radius: 3px  
   padding-top: 21px  
+  background-color: #fff
   &__top, &__bottom
     +clr
     padding-left: 24px
@@ -58,8 +59,10 @@
     +r1
       padding-left: 0
       padding-right: 0
-      padding-bottom: 69px
+      // padding-bottom: 0
       padding-top: 0
+      display: flex
+      flex-direction: column
   &__select, &__filter-tags, &__all, &__checkboxes, &__links
     float: left
   &__select, &__all
@@ -86,16 +89,15 @@
       padding-left: 25px
       padding-right: 25px
     +r1
-      height: 69px
       position: relative
-      top: 69px
-      +vertical
       font-size: 20px
-      p
-        display: inline-block
-        vertical-align: middle
+      order: 2
+      padding-top: 13px
+      text-align: center
+      padding-left: 20px
+      padding-right: 20px
     +r(584)
-        top: 97px 
+        // top: 97px 
         font-size: 14px 
   &__checkboxes
     padding-top: 4px
@@ -103,9 +105,10 @@
       border-bottom: 1px solid  $gray
       padding-top: 21px
       padding-bottom: 5px
-      margin-top: -69px
+      // margin-top: -69px
       padding-left: 20px
       padding-right: 20px
+      order: 1
       .checkbox
         margin-bottom: 16px
     +r2
@@ -120,11 +123,28 @@
         margin-right: 0
   &__links
     padding-top: 4px
+    +r1
+      border-bottom: 1px solid  $gray
+      order: 1
+      padding-top: 25px
+      padding-bottom: 25px
+      padding-left: 20px
+      padding-right: 20px
+    +r3
+      border-bottom: none
+      padding-top: 17px
+      padding-bottom: 17px
   &__link
     display: inline-block
     margin-right: 65px
     font-size: 16px
     color: #6c8784
+    &:nth-child(3)
+      margin-right: 0
+    +r3
+      font-size: 12px
+      margin-right: 30px
+
     &.is-active
       text-decoration: underline
       color: #ff8c61
