--- a/src/sass/new-style-2.sass
+++ b/src/sass/new-style-2.sass
@@ -491,13 +491,15 @@ $gray: #d8d8d8
 .map-tag
   font-size: 16px
   +med
-  color: $text  
-  
+  color: $text    
   background-color: transparent
   display: inline-block
   text-align: center
   min-width: 160px
   padding: 10px
+  +r3
+    font-size: 12px
+    min-width: 140px
   &.is-active
     color: #fff
     background-image: linear-gradient(180deg, #ffa461 0%, #f67e25 100%)
